# gruvpaper

./: LICENSE  README.md  gruvpaper.sh
gruvpaper/: CMakeLists.txt
gruvpaper/include/: CImg.h
gruvpaper/src/: gruvpaper.cpp
